Fix #2086, Deploy cfe-userguide pdf within reusable workflow

--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -53,7 +53,8 @@ jobs:
       target: "[\"cfe-usersguide\"]"
       cache-key: cfs-doc-${{ github.run_number }}
       checkout: false
-      deploy: false
+      buildpdf: ${{ github.event_name == 'push' && contains(github.ref, 'main')}}
+      deploy: ${{ github.event_name == 'push' && contains(github.ref, 'main')}}
 
   build-mission-doc:
     needs: checkout-and-cache
@@ -66,28 +67,3 @@ jobs:
       checkout: false
       deploy: false
       buildpdf: false # No need for mission pdf within cFE, done at bundle level
-
-  deploy-documentation:
-    needs: build-cfe-usersguide
-    if: ${{ github.event_name == 'push' && contains(github.ref, 'main')}}
-    name: Deploy documentation to gh-pages
-    runs-on: ubuntu-latest
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/download-artifact@v3
-
-      - name: Display structure of downloaded files
-        run: ls -R
-
-      - name: Move pdfs to deployment directory
-        run: mkdir deploy; mv */*.pdf deploy
-
-      - name: Deploy to GitHub
-        uses: JamesIves/github-pages-deploy-action@3.7.1
-        with:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          BRANCH: gh-pages
-          FOLDER: deploy
-          SINGLE_COMMIT: true
