--- a/.github/workflows/build-documentation.yml
+++ b/.github/workflows/build-documentation.yml
@@ -18,12 +18,12 @@ jobs:
         with:
           concurrent_skipping: 'same_content'
           skip_after_successful_duplicate: 'true'
-          do_not_skip: '["push", "workflow_dispatch", "schedule"]'
+          do_not_skip: '["pull_request", "workflow_dispatch", "schedule"]'
 
   checkout-and-cache:
     name: Custom checkout and cache for cFS documents
     needs: checks-for-duplicates
-    if: ${{ needs.checks-for-duplicates.outputs.should_skip != 'true' }}
+    if: ${{ needs.checks-for-duplicates.outputs.should_skip != 'true' }} 
     runs-on: ubuntu-latest
 
     steps:
@@ -47,23 +47,21 @@ jobs:
 
   build-cfe-usersguide:
     needs: checkout-and-cache
-    name: Build and deploy cFS documents
+    name: Build and deploy cFE Docs
     uses: nasa/cFS/.github/workflows/build-deploy-doc.yml@main
     with:
       target: "[\"cfe-usersguide\"]"
       cache-key: cfs-doc-${{ github.run_number }}
-      checkout: false
       buildpdf: ${{ github.event_name == 'push' && contains(github.ref, 'main')}}
       deploy: ${{ github.event_name == 'push' && contains(github.ref, 'main')}}
 
   build-mission-doc:
     needs: checkout-and-cache
-    name: Build and deploy cFS documents
+    name: Build Mission Doc
     #uses: nasa/cFS/.github/workflows/build-deploy-doc.yml
-    uses: skliper/cFS/.github/workflows/build-deploy-doc.yml@fix447-deploy_mission_doc
+    uses: nasa/cFS/.github/workflows/build-deploy-doc.yml@main
     with:
       target: "[\"mission-doc\"]"
       cache-key: cfs-doc-${{ github.run_number }}
-      checkout: false
       deploy: false
       buildpdf: false # No need for mission pdf within cFE, done at bundle level
