Fix #2262, separate dispatcher for messages
Isolate the message verification and dispatch from the general message
processing.  Functions in the "task" source file now strictly handle the
command content, and do not get involved in general validation.

Also note: this is mostly a simple code move but does add a "const"
qualifier to the task pipe function where it was missing before.  All of
the handlers were already "const".

--- a/modules/evs/CMakeLists.txt
+++ b/modules/evs/CMakeLists.txt
@@ -12,10 +12,7 @@ set(evs_SOURCES
     fsw/src/cfe_evs_log.c
     fsw/src/cfe_evs_task.c
     fsw/src/cfe_evs_utils.c
-    fsw/src/cfe_evs.c
-    fsw/src/cfe_evs_log.c
-    fsw/src/cfe_evs_task.c
-    fsw/src/cfe_evs_utils.c
+    fsw/src/cfe_evs_dispatch.c
 )
 add_library(evs STATIC ${evs_SOURCES})
 
