--- a/modules/cfe_testcase/CMakeLists.txt
+++ b/modules/cfe_testcase/CMakeLists.txt
@@ -20,9 +20,10 @@ add_cfe_app(cfe_testcase
     src/evs_send_test.c
     src/fs_header_test.c
     src/fs_util_test.c
-    src/message_id_test.c
     src/msg_api_test.c
+    src/msg_msg_id_test.c
     src/resource_id_misc_test.c
+    src/sb_msg_id_test.c
     src/sb_performance_test.c
     src/sb_pipe_mang_test.c
     src/sb_sendrecv_test.c
