Fix #2451, minor reorg of message headers
Puts the message encapsulation in a separate header from the message
payload.  Also puts all headers into the "header-check" target as there
were some inclusion dependencies noted.

--- a/modules/es/CMakeLists.txt
+++ b/modules/es/CMakeLists.txt
@@ -35,6 +35,16 @@ if (ENABLE_UNIT_TESTS)
 endif (ENABLE_UNIT_TESTS)
 
 cfs_app_check_intf(${DEP}
-    cfe_es_msg.h
     cfe_es_eventids.h
-)
+    cfe_es_extern_typedefs.h
+    cfe_es_fcncodes.h
+    cfe_es_interface_cfg.h
+    cfe_es_internal_cfg.h
+    cfe_es_mission_cfg.h
+    cfe_es_msgdefs.h
+    cfe_es_msg.h
+    cfe_es_msgids.h
+    cfe_es_msgstruct.h
+    cfe_es_platform_cfg.h
+    cfe_es_topicids.h
+  )
