Fix #2595, Use string append and add newline
to avoid using list, which appends an undesired semicolon

--- a/modules/config/tool/CMakeLists.txt
+++ b/modules/config/tool/CMakeLists.txt
@@ -47,7 +47,7 @@ foreach(SYSVAR ${TGTSYS_LIST})
   set(PLATFORM_DEFINE_FILE ${MISSION_BINARY_DIR}/src/${OBJLIB_NAME}.c)
   set(PLATFORM_LIST_FILE ${MISSION_BINARY_DIR}/src/${OBJLIB_NAME}.list)
   list(APPEND PLATFORM_CONFIG_LIST $<TARGET_OBJECTS:${OBJLIB_NAME}>)
-  list(APPEND PLATFORM_OBJ_NAMES "CFE_PLATFORM(${SYSVAR})")
+  string(APPEND PLATFORM_OBJ_NAMES "CFE_PLATFORM(${SYSVAR})\n")
 
   add_custom_command(
     OUTPUT ${PLATFORM_DEFINE_FILE}
